# base_fullstack

./: .env.sample  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.branch-plans/: pgvector-similar-comments.md  websocket-channels-sample.md
.branch-plans/feature/: fix-dockerfile-and-ci-pipeline.md  update-django-vite.md  update-react-latest.md  websocket-echo-integration.md
.github/workflows/: test_pr.yml
backend/: .env.example  .flake8  Dockerfile  pyproject.toml  pytest.ini
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: sio_server.py
backend/comment/: admin.py  embeddings.py  models.py
backend/comment/api/: serializers.py  views.py
backend/comment/management/commands/: seed_comments.py
backend/comment/migrations/: 0002_comment.py
backend/comment/tests/: test_similarity.py
backend/user/: admin.py  managers.py  models.py
backend/user/api/: serializers.py  views.py
backend/user/management/commands/: seed.py
backend/user/migrations/: 0001_initial.py
backend/user/tests/: test_tests.py
backend/websocket/: consumers.py  routing.py
backend/websocket/tests/: test_consumers.py
frontend/: .env.sample  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: Router.tsx  bootstrap.scss  config.ts  index.css  main.tsx  models.ts
frontend/src/api/: auth.ts  auth.tsx
frontend/src/components/EchoChat/: EchoChat.tsx
frontend/src/components/MainNavbar/: MainNavbar.tsx
frontend/src/context/auth/: AuthContext.ts  (+2 more)
frontend/src/hooks/: useWebSocket.ts
(+15 files in other folders)
